Make sure GStatBuf is typedefed correctly

https://bugzilla.gnome.org/show_bug.cgi?id=728663